# teste-flask

./: README.md  pyproject.toml
classes/: __init__.py
factory/: __init__.py
simples/: __init__.py
tests/: testes.sh
